Fixes some spacing inconsistencies.

--- a/app/assets/stylesheets/modules/_breadcrumbs.scss
+++ b/app/assets/stylesheets/modules/_breadcrumbs.scss
@@ -1,5 +1,5 @@
 .breadcrumb {
-  margin: rem-calc(60) 0;
+  margin: rem-calc(30) 0;
   position: relative;
 
   .button {
