--- a/app/assets/stylesheets/modules/_spacing.scss
+++ b/app/assets/stylesheets/modules/_spacing.scss
@@ -49,3 +49,4 @@
 .p--l { padding-left: rem-calc(5) !important; }
 
 .no-margin { margin: 0 !important; }
+.no-margin-top { margin-top: 0 !important; }
